--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "keywords": [
     "k6"
   ],
-  "author": "",
+  "author": "Dhanapathi Marepalli, Sarath Nidumolu",
   "license": "ISC",
   "type": "module",
   "dependencies": {
