--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   "type": "module",
   "dependencies": {
     "@google/genai": "^1.28.0",
-    "@langchain/google-genai": "^1.0.0",
+    "@langchain/google-genai": "^1.0.3",
+    "@langchain/ollama": "^1.0.3",
+    "@langchain/openai": "^1.1.3",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "fs": "^0.0.1-security",
-    "langchain": "^1.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "pdf-parse": "^2.4.5",
